--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
     "express-validator": "^7.0.1",
+    "graphql": "^16.6.0",
     "mongoose": "^7.0.5",
     "swagger-ui-express": "^4.6.3"
   },
