--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express-graphql": "^0.12.0",
     "express-validator": "^7.0.1",
     "mongoose": "^7.0.5",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
