--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "connect-mongo": "^5.0.0",
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
+    "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "mongoose": "^7.2.2",
+    "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "swagger-ui-express": "^4.6.3"
